# pimax-alvr-client

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md
.codex/: tasks.md
android/java/com/pimax/alvr/client/: ProximityWakePolicy.java  VrRenderActivity.java
android/test/com/pimax/alvr/client/: ProximityWakePolicyTest.java
scripts/: build-android-client.ps1  pimax-controlled-launch-test.ps1  pimax-display-state-diagnose.ps1  pimax-ensure-guardian-stationary.ps1  test-proximity-wake-policy.ps1
src/: android.rs  android_video_decoder.rs  client.rs  config.rs  controller.rs  lib.rs  pimax.rs  protocol.rs  tune.rs  tune_host.rs  video_receiver.rs  video_receiver_host.rs
tools/vr-diagnostic-tool/: README.md  requirements.txt  vr_diagnostic.py
