[package]
name = "pimax-alvr-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pimax Crystal OG ALVR client core"

[lib]
name = "pimax_alvr_client"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
glam = { version = "0.30", features = ["serde"] }
libc = "0.2"
log = "0.4"
ndk-context = "0.1"
ndk = { version = "0.7", features = ["api-level-26"] }
openxr = "0.19"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
jni = "0.21"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
ndk-glue = "0.7"
ndk-sys = { version = "0.4.1", features = ["media"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.android]
package = "com.pimax.alvr.client"
build_targets = ["aarch64-linux-android"]
apk_name = "pimax-alvr-client"
runtime_libs = "android/runtime-libs"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 32

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_WIFI_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAMERA"

[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_SETTINGS"

[[package.metadata.android.uses_permission]]
name = "org.khronos.openxr.permission.OPENXR"

[[package.metadata.android.uses_permission]]
name = "org.khronos.openxr.permission.OPENXR_SYSTEM"

[[package.metadata.android.uses_feature]]
name = "android.hardware.microphone"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true
version = 1

[[package.metadata.android.uses_feature]]
name = "android.hardware.wifi"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.screen.landscape"
required = true

[[package.metadata.android.queries.provider]]
name = "org.khronos.openxr"
authorities = "org.khronos.openxr.runtime_broker;org.khronos.openxr.system_runtime_broker"

[[package.metadata.android.queries.intent]]
actions = ["org.khronos.openxr.OpenXRRuntimeService"]

[package.metadata.android.application]
label = "Pimax ALVR"
debuggable = true
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
extract_native_libs = true
has_code = true

[[package.metadata.android.application.meta_data]]
name = "com.pimax.vr.application.mode"
value = "vr"

[package.metadata.android.application.activity]
name = "com.pimax.alvr.client.VrRenderActivity"
config_changes = "density|screenSize|uiMode|screenLayout|orientation|navigation|keyboardHidden|keyboard"
exported = true

[[package.metadata.android.application.activity.meta_data]]
name = "com.pimax.vr.application.mode"
value = "vr"

[[package.metadata.android.application.activity.meta_data]]
name = "com.android.graphics.developerdriver.enable"
value = "true"
